--- a/client/src/index/index.css
+++ b/client/src/index/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .card {
+        @apply drop-shadow-sm border-[1px] border-solid rounded-sm border-stone-200 bg-stone-50;
+    }
+}
